# Vision-Coach

./: README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/active_learning/: __init__.py  service.py
backend/app/api/: routes.py
backend/app/calibration/: runner.py
backend/app/domain/: __init__.py  exercise_catalog.py  exercise_library.py  jobs.py  pipeline_status.json  pipeline_status.py
backend/app/exercise_classifier/: __init__.py  heuristic.py
backend/app/external_catalog/: __init__.py  discipline_variants.json  store.py
backend/app/llm_provider/: __init__.py  providers.py
backend/app/processing/: __init__.py  media.py  worker.py
backend/app/progress/: __init__.py  service.py
backend/app/rag/: __init__.py  coaching.py  embeddings.py  knowledge.py  metadata.py  vector_index.py
backend/app/reference/: __init__.py  library.py
backend/tests/: test_active_learning.py  test_api.py  test_biomechanics_benchmark.py  test_catalog_expansion.py  test_embedding_benchmark.py  test_equipment_pipeline.py  test_exercise_classifier.py  test_external_catalog.py  test_increment5.py  test_kipping_pull_up.py  test_knowledge.py  test_media.py  test_rules_engine.py
backend/tools/: audit_catalog.py  build_vector_index.py  enrich_equipment_artifact.py  evaluate_biomechanics.py  evaluate_embedding_indexes.py  evaluate_hybrid_rag.py  find_source_pages.py  import_exercises_dataset.py  ingest_pdfs.py  probe_equipment.py  sample_equipment_frames.py  tag_knowledge_chunks.py  train_equipment_rfdetr.py  verify_catalog.py
(+34 files in other folders)
