[project]
name = "biomech-coach-backend"
version = "0.1.0"
description = "Backend local para análisis biomecánico post-hoc de videos"
requires-python = ">=3.12,<3.13"
dependencies = [
  "av>=14,<17",
  "fastapi>=0.115,<1.0",
  "google-genai>=1.0,<2.0",
  "numpy>=2.0,<3.0",
  "pydantic>=2.10,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "rfdetr==1.8.0",
  "sqlalchemy>=2.0,<3.0",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
